--- a/KomisyonNET/Properties/Settings.settings
+++ b/KomisyonNET/Properties/Settings.settings
@@ -2,8 +2,17 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="KomisyonNET.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="theme" Type="System.Int32" Scope="User">
+    <Setting Name="themeS" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="isFirstS" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="feeS" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">500</Value>
+    </Setting>
+    <Setting Name="comS" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">2</Value>
     </Setting>
   </Settings>
 </SettingsFile>
