--- a/KomisyonNET/packages.config
+++ b/KomisyonNET/packages.config
@@ -5,6 +5,9 @@
   <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net48" />
   <package id="HarfBuzzSharp" version="2.6.1.5" targetFramework="net48" />
   <package id="Irony.NetCore" version="1.0.11" targetFramework="net48" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net48" />
+  <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net48" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net48" />
   <package id="MaterialSkin.2" version="2.3.1" targetFramework="net48" />
   <package id="SixLabors.Fonts" version="1.0.0" targetFramework="net48" />
   <package id="Spire.Barcode" version="7.3.2" targetFramework="net48" />
